# PatHarrison.github.io

./: .gitignore  .gitmodules  README.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: deploy.yml  pelican.yml
content/articles/: HaidiGwaiiFishPopulation.md  cartography-examples.md  filling-the-gaps.md  foss-enterprise-server.md  landcover-image-classification.md
content/notebooks/: Analysis.ipynb  Analysis.nbdata
content/pages/: about.md  contact.md  goals.md  portfolio.md  skills.md  timeline.md
maps/waiparous_landcover/: index.html
maps/waiparous_landcover/data/: LandcoverPolygons_0.js
output/: archives.html  authors.html  categories.html  index.html  tags.html
output/pages/: 1.html  about-me.html  contact-me.html  contact.html  goals.html  my-super-post.html  portfolio.html  skills.html
themes/cebong/templates/: base.html  index.html  portfolio.html
